--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,8 @@ body {
 .card {
     border: 1px solid white;
     border-radius: 5px;
-    width: 500px;
-    height: 300px;
+    width: 40%;
+    height: 400px;
     padding: 30px;
     padding-bottom: 10px;
     background-color: lightslategray;
@@ -46,6 +46,7 @@ body {
 
 .card-text {
     width: 40%;
+    padding-right: 10px;
 }
 
 .card-content {
